# SmartFarm

./: README.TXT  README.md  README.txt  fonction.c  fonction.h  fonctionsTroupeaux.h  main.c  prog
Borj Lella/OUTBOX/src/: Makefile  Makefile.am  Makefile.in  alim.txt  authentification.c  authentification.h  callbacks.c  callbacks.h  capteur.c  capteur.h  email.sh  email.txt  employee.c  employee.h  entretiens.c  entretiens.h  equipements.c  equipements.h  ficheanimal.txt  gestion_achat.c  gestion_clients.c  gestion_clients.h  gestion_dachat.h  help.txt  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  opn.txt  outbox  ouvrier.c  ouvrier.h  pdf.sh  pdf_alim.sh  pdf_ficheanimal.sh  plantation.c  plantation.h  troupeaux.c  troupeaux.h
Borj Lella/OUTBOX/src/.deps/: authentification.Po  callbacks.Po  employee.Po  entretiens.Po  equipements.Po  gestion_clients.Po  troupeaux.Po
Gestion clients/: Makefile  Makefile.am  Makefile.in  config.h  interfacegtk.glade.bak  interfacegtk.gladep.bak
Gestion_des_clients/: config.status  interfacegtk.glade.bak
Outbox/: Makefile  config.h  config.status  configure  finalproject.glade  finalproject.glade.bak  finalproject.gladep.bak
Outbox/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  finalproject  gestion_clients.c  gestion_clients.h  gestion_dachat.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  outbox  partie2.h
Outbox/src/.deps/: callbacks.Po  dashboard.Po  espace_employee.Po  gestion_capteur.Po  gestion_employee.Po  gestion_equip.Po  gestion_ouvrier.Po  gestion_plant.Po  login.Po  main.Po
Outbox1/: Makefile  config.h  config.status  configure.in  finalproject.gladep
Youssef (projet final sans graphique)/: Makefile  Makefile.am  plantations.glade.bak  plantations.gladep
Youssef 2/: Makefile  Makefile.in  config.h  config.status  plantations.glade
Youssef 2/src/: Makefile  Makefile.am  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  plantation.c  plantation.h  plantation.txt  plantations
Youssef 2/src/.deps/: plantation.Po
Youssef 8/: configure  plantations.glade
ahmed/: Makefile  Makefile.am  config.status  equipements.glade.bak  equipements.gladep.bak
ahmed2/: Makefile.in  config.h  configure  configure.in  equipements.glade.bak
crude/: client.c  client.h  main.c  makefile  prog
gestionEmployee/: Makefile.am  configure.in  gestionemployee.glade.bak  gestionemployee.gladep.bak
gestionOuvrier/: Makefile  Makefile.am  Makefile.in  config.h  config.status  (+4 more)
travailEmp/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  employee.c  employee.h  interface.c  interface.c.bak  interface.h  main.c  travailemp
travailEmp/src/.deps/: callbacks.Po
(+325 files in other folders)
